--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/Action_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -25,8 +25,8 @@
 
     <Button
         android:id="@+id/Action_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -43,8 +43,8 @@
 
     <Button
         android:id="@+id/Action_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -54,15 +54,15 @@
         android:text="Action 4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.104"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.856" />
+        app:layout_constraintVertical_bias="0.85" />
 
     <Button
         android:id="@+id/Action_3"
-        android:layout_width="wrap_content"
-        android:layout_height="49dp"
+        android:layout_width="190dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -91,16 +91,16 @@
         android:paddingLeft="@android:dimen/app_icon_size"
         android:paddingRight="@android:dimen/app_icon_size"
         android:paddingTop="@android:dimen/app_icon_size"
-        android:text="In a world...djk asbdkj abdhjsba sjbd jabsdkjbadkj baskjdbaskjbd kjabd ksabdjkabs dkjbasdnb asmndba nsbd nabsdbas ndba dkjabs djnaj dhjasn djashndj najdakjdh kjahdjahsdkj ahdkjaskjd hajhd ahds hakjdhakjhjghgjhakjshd jahdj shajd hajashd jashfkjhafjhasfj hasfkjhasjfh akjshfkjash jhafjshfkjah ahfhas fhsa f"
-        android:textSize="14sp"
+        android:text="In a world..."
+        android:textSize="18sp"
         android:typeface="normal"
         app:fontFamily="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.249" />
 
     <ImageView
         android:id="@+id/Image_1"
