--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
         android:paddingLeft="@android:dimen/app_icon_size"
         android:paddingRight="@android:dimen/app_icon_size"
         android:paddingTop="@android:dimen/app_icon_size"
-        android:text="In a world..."
+        android:text="Tell us your name, traveller..."
         android:textSize="18sp"
         android:typeface="normal"
         app:fontFamily="serif"
@@ -132,9 +132,10 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="Start"
         android:text="Start Your Adventure!"
-        android:textSize="24sp"
-        android:visibility="invisible"
+        android:textSize="30sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -143,9 +144,9 @@
         app:layout_constraintVertical_bias="0.879" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="274dp"
-        android:layout_height="81dp"
+        android:id="@+id/Name"
+        android:layout_width="550dp"
+        android:layout_height="63dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -160,5 +161,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589" />
+        app:layout_constraintVertical_bias="0.6" />
 </android.support.constraint.ConstraintLayout>
